# rust_bootcamp

./: .gitignore  AUTHORS.md  Cargo.toml  test.txt
rust_00/: Cargo.toml  rust_00.rs
rust_01/: Cargo.toml  rust_01.rs
rust_02/: Cargo.toml  rust_02.rs
rust_03/: Cargo.toml  rust_03.rs
rust_04/: Cargo.toml  rust_04.rs
src/: main.rs
